Removed Java 20 test sources to simplify builds
Signed-off-by: Ketan Verma <ketan9495@gmail.com>